--- a/portfolio.html
+++ b/portfolio.html
@@ -194,18 +194,24 @@
                 </div>
 
                 <div class="blog">
+                    <a href="https://sonibasant.hashnode.dev/introduction-of-the-article-series" target="_blank" rel="noopener noreferrer">
+                        <img src="https://sonibasant.github.io/Portfolio-Basant-Soni/Images/H6.jpg" alt="introduction of the article series">
+                        <!-- <p>Failed interview of a novice and outsider</p> -->
+                    </a>
+                </div>
+
+                <div class="blog">
                     <a href="https://sonibasant.hashnode.dev/tribute-page-project-my-first-project" target="_blank" rel="noopener noreferrer">
                         <img src="https://sonibasant.github.io/Portfolio-Basant-Soni/Images/H5.jpg" alt="Tribute Page Project">
                         <!-- <p>Tribute Page Project</p> -->
                     </a>
                 </div>
-
+<!-- 
                 <div class="blog">
                     <a href="https://sonibasant.hashnode.dev/survey-form" target="_blank" rel="noopener noreferrer">
                         <img src="https://sonibasant.github.io/Portfolio-Basant-Soni/Images/H2.jpg" alt="Survey Form">
-                        <!-- <p>Survey Form</p> -->
                     </a>
-                </div>
+                </div> -->
 
             </div>
         </section>
@@ -239,6 +245,7 @@
                     </span>
                     <p>: sbasant.jnct@gmail.com</p>
                 </div>
+
 
                 <div class="contact-item">
                     <span class="icon">
@@ -280,6 +287,21 @@
                         <p>Hashnode</p>
                     </a>
                 </span>
+
+                <span class="frontendMentor">
+                    <a href="https://www.frontendmentor.io/profile/SoniBasant" target="_blank" rel="noopener noreferrer">
+                        <div class="circle">
+                            <div class="dot1"></div>
+                            <div class="dot2"></div>
+                            <div class="line"></div>
+                            <div class="arrow">
+                                <div class="arrow1"></div>
+                                <div class="arrow2"></div>
+                            </div>
+                        </div>
+                        <p>Frontend Mentor</p>
+                    </a>
+                </span>
             </div>
         </section>
         <!-- contact end -->
@@ -287,23 +309,29 @@
 
     <!-- controls- mode and section -->
     <div class="controls">
-        <div class="control control-1 active-btn" data-id="home">
+        <!-- <label for="btn" class="switch">
+            <input type="checkbox" name="" id="btn">
+            <span class="slider"></span>
+        </label> -->
+        <div class="control active-btn" data-id="home">
             <i class="fas fa-home"></i>
         </div>
-        <div class="control control-2" data-id="about">
+        <div class="control" data-id="about">
             <i class="fas fa-user"></i>
         </div>
-        <div class="control control-3" data-id="portfolio">
+        <div class="control" data-id="portfolio">
             <i class="fas fa-briefcase"></i>
         </div>
-        <div class="control control-4" data-id="blogs">
+        <div class="control" data-id="blogs">
             <i class="fas fa-newspaper"></i>
         </div>
-        <div class="control control-5" data-id="contact">
+        <div class="control" data-id="contact">
             <i class="fas fa-envelope-open"></i>
         </div>
     </div>
-
+    <div class="theme-btn">
+        <i class="fas fa-adjust"></i>
+    </div>
    
 </body>
 </html>
