--- a/portfolio.html
+++ b/portfolio.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Basant Soni">
+    <meta name="keywords" content="Portfolio, Frontend portfolio, pure css, html, JavaScript, Basant Soni, GitHub, sonibasant, theme change, Frontend Mentor logo, blogs, hashnode, JavaScript projects, front-end projects/">
     <title>Basant Soni Portfolio</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -315,18 +317,23 @@
         </label> -->
         <div class="control active-btn" data-id="home">
             <i class="fas fa-home"></i>
+            <p>Home</p>
         </div>
         <div class="control" data-id="about">
             <i class="fas fa-user"></i>
+            <p>About</p>
         </div>
         <div class="control" data-id="portfolio">
             <i class="fas fa-briefcase"></i>
+            <p>Project</p>
         </div>
         <div class="control" data-id="blogs">
             <i class="fas fa-newspaper"></i>
+            <p>Blog</p>
         </div>
         <div class="control" data-id="contact">
             <i class="fas fa-envelope-open"></i>
+            <p>Contact</p>
         </div>
     </div>
     <div class="theme-btn">
