Change image links
Change src link of project images.

--- a/portfolio.html
+++ b/portfolio.html
@@ -124,21 +124,21 @@
 
                 <div class="project">
                     <a href="https://codepen.io/sonibasant/full/NWazGOe" target="_blank" rel="noopener noreferrer">
-                        <img src="https://sonibasant.github.io/FCC-HTML-CSS/Portfolio%20pics/NE1.jpg" alt="Northeast Survey Form">
+                        <img src="https://sonibasant.github.io/FCC-Responsive-Web-Design/A4.%20Portfolio%20Page/Images/NE1.jpg" alt="Northeast Survey Form">
                         <p>Survey Form Page</p>
                     </a>
                 </div>
 
                 <div class="project">
                     <a href="http://codepen.io/sonibasant/full/GRMYLME" target="_blank" rel="noopener noreferrer">
-                        <img src="https://sonibasant.github.io/FCC-HTML-CSS/Portfolio%20pics/PLP1.jpg" alt="Colorkeeprs">
+                        <img src="https://sonibasant.github.io/FCC-Responsive-Web-Design/A4.%20Portfolio%20Page/Images/PLP1.jpg" alt="Colorkeeprs">
                         <p>Product Landing Page</p>
                     </a>
                 </div>
 
                 <div class="project">
                     <a href="http://codepen.io/sonibasant/full/QWajLxb" target="_blank" rel="noopener noreferrer">
-                        <img src="https://sonibasant.github.io/FCC-HTML-CSS/Portfolio%20pics/TD1.jpg" alt="Technical Documentation">
+                        <img src="https://sonibasant.github.io/FCC-Responsive-Web-Design/A4.%20Portfolio%20Page/Images/TD1.jpg" alt="Technical Documentation">
                         <p>Technical Documentation Page</p>
                     </a>
                 </div>
