--- a/portfolio.html
+++ b/portfolio.html
@@ -123,14 +123,14 @@
             <div class="projects-container">
 
                 <div class="project">
-                    <a href="https://codepen.io/sonibasant/full/NWazGOe" target="_blank" rel="noopener noreferrer">
+                    <a href="https://sonibasant.github.io/FCC-Responsive-Web-Design/A1.%20Survey%20Form%20Page/surveyForm.html" target="_blank" rel="noopener noreferrer">
                         <img src="https://sonibasant.github.io/FCC-Responsive-Web-Design/A4.%20Portfolio%20Page/Images/NE1.jpg" alt="Northeast Survey Form">
                         <p>Survey Form Page</p>
                     </a>
                 </div>
 
                 <div class="project">
-                    <a href="http://codepen.io/sonibasant/full/GRMYLME" target="_blank" rel="noopener noreferrer">
+                    <a href="https://sonibasant.github.io/FCC-Responsive-Web-Design/A2.%20Product%20Landing%20Page/productLP.html" target="_blank" rel="noopener noreferrer">
                         <img src="https://sonibasant.github.io/FCC-Responsive-Web-Design/A4.%20Portfolio%20Page/Images/PLP1.jpg" alt="Colorkeeprs">
                         <p>Product Landing Page</p>
                     </a>
