Change a link of project
Change href link of "Technical Documentation Page" project from Codepen to GitHub

--- a/portfolio.html
+++ b/portfolio.html
@@ -137,7 +137,7 @@
                 </div>
 
                 <div class="project">
-                    <a href="http://codepen.io/sonibasant/full/QWajLxb" target="_blank" rel="noopener noreferrer">
+                    <a href="https://sonibasant.github.io/FCC-Responsive-Web-Design/A3.%20Technical%20Documentation%20Page/TD.html" target="_blank" rel="noopener noreferrer">
                         <img src="https://sonibasant.github.io/FCC-Responsive-Web-Design/A4.%20Portfolio%20Page/Images/TD1.jpg" alt="Technical Documentation">
                         <p>Technical Documentation Page</p>
                     </a>
