Add masking class to show Tech stack of projects

--- a/portfolio.html
+++ b/portfolio.html
@@ -126,6 +126,7 @@
                     <a href="https://sonibasant.github.io/FCC-Responsive-Web-Design/A1.%20Survey%20Form%20Page/surveyForm.html" target="_blank" rel="noopener noreferrer">
                         <img src="https://sonibasant.github.io/FCC-Responsive-Web-Design/A4.%20Portfolio%20Page/Images/NE1.jpg" alt="Northeast Survey Form">
                         <p>Survey Form Page</p>
+                        <div class="masking">HTML <br>CSS <br>JavaScript</div>
                     </a>
                 </div>
 
@@ -133,6 +134,7 @@
                     <a href="https://sonibasant.github.io/FCC-Responsive-Web-Design/A2.%20Product%20Landing%20Page/productLP.html" target="_blank" rel="noopener noreferrer">
                         <img src="https://sonibasant.github.io/FCC-Responsive-Web-Design/A4.%20Portfolio%20Page/Images/PLP1.jpg" alt="Colorkeeprs">
                         <p>Product Landing Page</p>
+                        <div class="masking">HTML <br>CSS</div>
                     </a>
                 </div>
 
@@ -140,6 +142,7 @@
                     <a href="https://sonibasant.github.io/FCC-Responsive-Web-Design/A3.%20Technical%20Documentation%20Page/TD.html" target="_blank" rel="noopener noreferrer">
                         <img src="https://sonibasant.github.io/FCC-Responsive-Web-Design/A4.%20Portfolio%20Page/Images/TD1.jpg" alt="Technical Documentation">
                         <p>Technical Documentation Page</p>
+                        <div class="masking">HTML <br>CSS <br>JavaScript</div>
                     </a>
                 </div>
 
@@ -147,6 +150,7 @@
                     <a href="https://sonibasant.github.io/50-Projects-on-JS-DOM/A0.%20Expanding%20Cards/Expan-cards.html" target="_blank" rel="noopener noreferrer">
                         <img src="https://sonibasant.github.io/Portfolio-Basant-Soni/Images/ExpCards.jpg" alt="Bottles Image Cards">
                         <p>Expanding Cards</p>
+                        <div class="masking">HTML <br>CSS <br>JavaScript</div>
                     </a>
                 </div>
 
@@ -154,6 +158,7 @@
                     <a href="https://sonibasant.github.io/50-Projects-on-JS-DOM/E0.%20Verify%20Account%20UI/verifyACUI.html" target="_blank" rel="noopener noreferrer">
                         <img src="https://sonibasant.github.io/Portfolio-Basant-Soni/Images/VerifyAc.jpg" alt="Bottles Image Cards">
                         <p>Verify Your Account</p>
+                        <div class="masking">HTML <br>CSS <br>JavaScript</div>
                     </a>
                 </div>
 
