--- a/portfolio.html
+++ b/portfolio.html
@@ -123,42 +123,42 @@
             <div class="projects-container">
 
                 <div class="project">
-                    <a href="https://sonibasant.github.io/FCC-Responsive-Web-Design/A1.%20Survey%20Form%20Page/surveyForm.html" target="_blank" rel="noopener noreferrer">
-                        <img src="https://sonibasant.github.io/FCC-Responsive-Web-Design/A4.%20Portfolio%20Page/Images/NE1.jpg" alt="Northeast Survey Form">
-                        <p>Survey Form Page</p>
-                        <div class="masking">HTML <br>CSS <br>JavaScript</div>
+                    <a href="https://sonibasant.github.io/Vanilla-JavaScript-Projects/A7-Login-Form-SessionStorage-Validation-Tailwind/Reg.html" target="_blank" rel="noopener noreferrer">
+                        <img src="https://sonibasant.github.io/Vanilla-JavaScript-Projects/A7-Login-Form-SessionStorage-Validation-Tailwind/Images/Session-snap-1.png" alt="Northeast Survey Form">
+                        <p>Login Form</p>
+                        <div class="masking">HTML Tailwind JS <br>Session Storage <br>Form Validation</div>
                     </a>
                 </div>
 
                 <div class="project">
-                    <a href="https://sonibasant.github.io/FCC-Responsive-Web-Design/A2.%20Product%20Landing%20Page/productLP.html" target="_blank" rel="noopener noreferrer">
-                        <img src="https://sonibasant.github.io/FCC-Responsive-Web-Design/A4.%20Portfolio%20Page/Images/PLP1.jpg" alt="Colorkeeprs">
-                        <p>Product Landing Page</p>
-                        <div class="masking">HTML <br>CSS</div>
+                    <a href="https://sonibasant.github.io/Vanilla-JavaScript-Projects/A8.%20CRUD%20Form/crudForm.html" target="_blank" rel="noopener noreferrer">
+                        <img src="https://sonibasant.github.io/Vanilla-JavaScript-Projects/A8.%20CRUD%20Form/Images/CRUD-form-snap-3.png" alt="Colorkeeprs">
+                        <p>CRUD Form</p>
+                        <div class="masking">HTML CSS JS <br>CRUD operations <br>Local Storage</div>
                     </a>
                 </div>
 
                 <div class="project">
-                    <a href="https://sonibasant.github.io/FCC-Responsive-Web-Design/A3.%20Technical%20Documentation%20Page/TD.html" target="_blank" rel="noopener noreferrer">
-                        <img src="https://sonibasant.github.io/FCC-Responsive-Web-Design/A4.%20Portfolio%20Page/Images/TD1.jpg" alt="Technical Documentation">
-                        <p>Technical Documentation Page</p>
-                        <div class="masking">HTML <br>CSS <br>JavaScript</div>
+                    <a href="https://sonibasant.github.io/Vanilla-JavaScript-Projects/B1.%20Tic-Tac-Toe%20Game/ticTT.html" target="_blank" rel="noopener noreferrer">
+                        <img src="https://sonibasant.github.io/Vanilla-JavaScript-Projects/B1.%20Tic-Tac-Toe%20Game/Images/Tic-tac-toe-snap-3.png" alt="Technical Documentation">
+                        <p>Tic-Tac-Toe Game</p>
+                        <div class="masking">HTML CSS JS</div>
                     </a>
                 </div>
 
                 <div class="project">
-                    <a href="https://sonibasant.github.io/50-Projects-on-JS-DOM/A0.%20Expanding%20Cards/Expan-cards.html" target="_blank" rel="noopener noreferrer">
-                        <img src="https://sonibasant.github.io/Portfolio-Basant-Soni/Images/ExpCards.jpg" alt="Bottles Image Cards">
-                        <p>Expanding Cards</p>
-                        <div class="masking">HTML <br>CSS <br>JavaScript</div>
+                    <a href="https://sonibasant.github.io/Frontend-Mentor-Projects/A3-Manage-Landing-Page/index.html" target="_blank" rel="noopener noreferrer">
+                        <img src="https://sonibasant.github.io/Frontend-Mentor-Projects/A3-Manage-Landing-Page/images/Manage-LP-snap-4.png" alt="Bottles Image Cards">
+                        <p>Manage Landing Page</p>
+                        <div class="masking">HTML Tailwind JS <br>Carousel <br>Email Validation</div>
                     </a>
                 </div>
 
                 <div class="project">
-                    <a href="https://sonibasant.github.io/50-Projects-on-JS-DOM/E0.%20Verify%20Account%20UI/verifyACUI.html" target="_blank" rel="noopener noreferrer">
-                        <img src="https://sonibasant.github.io/Portfolio-Basant-Soni/Images/VerifyAc.jpg" alt="Bottles Image Cards">
-                        <p>Verify Your Account</p>
-                        <div class="masking">HTML <br>CSS <br>JavaScript</div>
+                    <a href="https://sonibasant.github.io/Frontend-Mentor-Projects/B4-Advice-Generator-App/index.html" target="_blank" rel="noopener noreferrer">
+                        <img src="https://sonibasant.github.io/Frontend-Mentor-Projects/B4-Advice-Generator-App/images/Advice-snap-1.png" alt="Bottles Image Cards">
+                        <p>Advice Generator</p>
+                        <div class="masking">HTML CSS JS <br>API</div>
                     </a>
                 </div>
 
