change email id

--- a/portfolio.html
+++ b/portfolio.html
@@ -250,7 +250,7 @@
                         <i class="fas fa-envelope"></i>
                         <span>Email</span>
                     </span>
-                    <p>: sbasant.jnct@gmail.com</p>
+                    <p>: bsoni_21@yahoo.in</p>
                 </div>
 
 
