--- a/portfolio.html
+++ b/portfolio.html
@@ -63,10 +63,12 @@
                 <div class="left-about content">
                     <h3>Information About Me</h3>
                     <p>
-                        I aspire to be a front-end web developer. Being a self-taught learner, I earned FCC certificates on Responsive web design and JavaScript courses by making projects using HTML, CSS and JavaScript. I also write articles on Hashnode blogging platform.
+                        I am a front-end web developer. Being a self-taught learner, I earned FCC certificates on Responsive web design and JavaScript courses. 
+                        After that I made lots of projects using HTML, CSS and JavaScript. 
+                        <br> Right now I am making projects with Tailwind, React, React Router and other technologies related to it. I also wrote some articles on Hashnode blogging platform.
                     </p>
                     <div class="btn-container">
-                        <a href="https://drive.google.com/drive/folders/14RhFPMExIQZq4u1ikInCsOJov_yje5UA?usp=sharing" class="main-btn">
+                        <a href="https://drive.google.com/drive/folders/14RhFPMExIQZq4u1ikInCsOJov_yje5UA?usp=sharing" target="_blank" rel="noopener noreferrer" class="main-btn">
                             <span class="btn-text">Download Resume</span>
                             <span class="btn-icon"><i class="fas fa-download"></i></span>
                         </a>
@@ -102,6 +104,17 @@
                             <i class="fab fa-github"></i>
                             <p>GitHub</p>
                         </span>
+                        <span class="icon-tailwind">
+                            <!-- <i class="fab fa-tailwind"></i> -->
+                            <!-- <i class="fab fa-brands fa-tailwind"></i> -->
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 54 33"><g clip-path="url(#prefix__clip0)"><path fill="#38bdf8" fill-rule="evenodd" d="M27 0c-7.2 0-11.7 3.6-13.5 10.8 2.7-3.6 5.85-4.95 9.45-4.05 2.054.513 3.522 2.004 5.147 3.653C30.744 13.09 33.808 16.2 40.5 16.2c7.2 0 11.7-3.6 13.5-10.8-2.7 3.6-5.85 4.95-9.45 4.05-2.054-.513-3.522-2.004-5.147-3.653C36.756 3.11 33.692 0 27 0zM13.5 16.2C6.3 16.2 1.8 19.8 0 27c2.7-3.6 5.85-4.95 9.45-4.05 2.054.514 3.522 2.004 5.147 3.653C17.244 29.29 20.308 32.4 27 32.4c7.2 0 11.7-3.6 13.5-10.8-2.7 3.6-5.85 4.95-9.45 4.05-2.054-.513-3.522-2.004-5.147-3.653C23.256 19.31 20.192 16.2 13.5 16.2z" clip-rule="evenodd"/></g><defs><clipPath id="prefix__clip0"><path fill="#fff" d="M0 0h54v32.4H0z"/></clipPath></defs></svg>
+                            <p>Tailwind</p>
+                        </span>
+                        <span class="icon-react">
+                            <!-- <i class="fab fa-tailwind"></i> -->
+                            <i class="fab fa-brands fa-react"></i>
+                            <p>React</p>
+                        </span>
                     </div>
                 </div>
             </div>
@@ -123,45 +136,72 @@
             <div class="projects-container">
 
                 <div class="project">
-                    <a href="https://sonibasant.github.io/Vanilla-JavaScript-Projects/A7-Login-Form-SessionStorage-Validation-Tailwind/Reg.html" target="_blank" rel="noopener noreferrer">
-                        <img src="https://sonibasant.github.io/Vanilla-JavaScript-Projects/A7-Login-Form-SessionStorage-Validation-Tailwind/Images/Session-snap-1.png" alt="Northeast Survey Form">
-                        <p>Login Form</p>
-                        <div class="masking">HTML Tailwind JS <br>Session Storage <br>Form Validation</div>
-                    </a>
+                    <img src="https://sonibasant.github.io/Newsletter-signup-with-success-message/src/assets/images/Newsletter-signup-snap-1.png" alt="Newsletter Signup">
+                    <p>Newsletter Signup</p>
+                    <div class="masking">
+                        <div class="project-links">
+                            <p><a href="https://sonibasant-newsletter-signup.netlify.app/" target="_blank" rel="noopener noreferrer">Live</a></p>
+                            <p><a href="https://github.com/SoniBasant/Newsletter-signup-with-success-message" target="_blank" rel="noopener noreferrer">Code</a></p>
+                        </div>
+                        React Tailwind Router <br>Single Page App <br>Vite
+                    </div>
+                </div>
+
+
+                <div class="project">
+                    <img src="https://sonibasant.github.io/Vanilla-JavaScript-Projects/A7-Login-Form-SessionStorage-Validation-Tailwind/Images/Session-snap-1.png" alt="Registration Form">
+                    <p>Registration Form</p>
+                    <div class="masking">
+                        <div class="project-links">
+                            <p><a href="https://sonibasant.github.io/Vanilla-JavaScript-Projects/A7-Login-Form-SessionStorage-Validation-Tailwind/Reg.html" target="_blank" rel="noopener noreferrer">Live</a></p>
+                            <p><a href="https://github.com/SoniBasant/Vanilla-JavaScript-Projects/tree/main/A6-Login-form-with-localStorage-Tailwind" target="_blank" rel="noopener noreferrer">Code</a></p>
+                        </div>
+                        HTML Tailwind JS <br>Session Storage <br>Form Validation
+                    </div>
                 </div>
 
                 <div class="project">
-                    <a href="https://sonibasant.github.io/Vanilla-JavaScript-Projects/A8.%20CRUD%20Form/crudForm.html" target="_blank" rel="noopener noreferrer">
-                        <img src="https://sonibasant.github.io/Vanilla-JavaScript-Projects/A8.%20CRUD%20Form/Images/CRUD-form-snap-3.png" alt="Colorkeeprs">
-                        <p>CRUD Form</p>
-                        <div class="masking">HTML CSS JS <br>CRUD operations <br>Local Storage</div>
-                    </a>
+                    <img src="https://sonibasant.github.io/Vanilla-JavaScript-Projects/A8.%20CRUD%20Form/Images/CRUD-form-snap-3.png" alt="CRUD form">
+                    <p>CRUD Form</p>
+                    <div class="masking">
+                        <div class="project-links">
+                            <p><a href="https://sonibasant.github.io/Vanilla-JavaScript-Projects/A8.%20CRUD%20Form/crudForm.html" target="_blank" rel="noopener noreferrer">Live</a></p>
+                            <p><a href="https://github.com/SoniBasant/Vanilla-JavaScript-Projects/tree/main/A8.%20CRUD%20Form" target="_blank" rel="noopener noreferrer">Code</a></p>
+                        </div>
+                        HTML CSS JS <br>CRUD operations <br>Local Storage
+                    </div>
                 </div>
 
                 <div class="project">
-                    <a href="https://sonibasant.github.io/Vanilla-JavaScript-Projects/B1.%20Tic-Tac-Toe%20Game/ticTT.html" target="_blank" rel="noopener noreferrer">
-                        <img src="https://sonibasant.github.io/Vanilla-JavaScript-Projects/B1.%20Tic-Tac-Toe%20Game/Images/Tic-tac-toe-snap-3.png" alt="Technical Documentation">
-                        <p>Tic-Tac-Toe Game</p>
-                        <div class="masking">HTML CSS JS</div>
-                    </a>
+                    <img src="https://sonibasant.github.io/Vanilla-JavaScript-Projects/B1.%20Tic-Tac-Toe%20Game/Images/Tic-tac-toe-snap-3.png" alt="Tic Tac Toe Game">
+                    <p>Tic-Tac-Toe Game</p>
+                    <div class="masking">
+                        <div class="project-links">
+                            <p><a href="https://sonibasant.github.io/Vanilla-JavaScript-Projects/B1.%20Tic-Tac-Toe%20Game/ticTT.html" target="_blank" rel="noopener noreferrer">Live</a></p>
+                            <p><a href="https://github.com/SoniBasant/Vanilla-JavaScript-Projects/tree/main/B1.%20Tic-Tac-Toe%20Game" target="_blank" rel="noopener noreferrer">Code</a></p>
+                        </div>
+                        HTML CSS JS
+                    </div>
                 </div>
 
                 <div class="project">
-                    <a href="https://sonibasant.github.io/Frontend-Mentor-Projects/A3-Manage-Landing-Page/index.html" target="_blank" rel="noopener noreferrer">
-                        <img src="https://sonibasant.github.io/Frontend-Mentor-Projects/A3-Manage-Landing-Page/images/Manage-LP-snap-4.png" alt="Bottles Image Cards">
-                        <p>Manage Landing Page</p>
-                        <div class="masking">HTML Tailwind JS <br>Carousel <br>Email Validation</div>
-                    </a>
+                    <img src="https://sonibasant.github.io/Frontend-Mentor-Projects/B4-Advice-Generator-App/images/Advice-snap-1.png" alt="Advice Generator App">
+                    <p>Advice Generator</p>
+                    <div class="masking">
+                        <div class="project-links">
+                            <p><a href="https://sonibasant.github.io/Frontend-Mentor-Projects/B4-Advice-Generator-App/index.html" target="_blank" rel="noopener noreferrer">Live</a></p>
+                            <p><a href="https://github.com/SoniBasant/Frontend-Mentor-Projects/tree/main/B4-Advice-Generator-App" target="_blank" rel="noopener noreferrer">Code</a></p>
+                        </div>
+                        HTML CSS JS <br>API
+                    </div>
                 </div>
 
-                <div class="project">
-                    <a href="https://sonibasant.github.io/Frontend-Mentor-Projects/B4-Advice-Generator-App/index.html" target="_blank" rel="noopener noreferrer">
-                        <img src="https://sonibasant.github.io/Frontend-Mentor-Projects/B4-Advice-Generator-App/images/Advice-snap-1.png" alt="Bottles Image Cards">
-                        <p>Advice Generator</p>
-                        <div class="masking">HTML CSS JS <br>API</div>
-                    </a>
-                </div>
+            </div>
 
+            <div class="more-projects">
+                <p>
+                    <a href="https://github.com/SoniBasant" target="_blank" rel="noopener noreferrer">See more Projects <i class="fas fa-arrow-right"></i></a>
+                </p>
             </div>
 
         </section>
@@ -279,6 +319,21 @@
                     </a>
                 </span>
 
+                <span class="frontendMentor">
+                    <a href="https://www.frontendmentor.io/profile/SoniBasant" target="_blank" rel="noopener noreferrer">
+                        <div class="circle">
+                            <div class="dot1"></div>
+                            <div class="dot2"></div>
+                            <div class="line"></div>
+                            <div class="arrow">
+                                <div class="arrow1"></div>
+                                <div class="arrow2"></div>
+                            </div>
+                        </div>
+                        <p>Frontend Mentor</p>
+                    </a>
+                </span>
+
                 <span class="codepen">
                     <a href="https://codepen.io/sonibasant" target="_blank" rel="noopener noreferrer">
                         <i class="fab fa-codepen"></i>
@@ -295,20 +350,6 @@
                     </a>
                 </span>
 
-                <span class="frontendMentor">
-                    <a href="https://www.frontendmentor.io/profile/SoniBasant" target="_blank" rel="noopener noreferrer">
-                        <div class="circle">
-                            <div class="dot1"></div>
-                            <div class="dot2"></div>
-                            <div class="line"></div>
-                            <div class="arrow">
-                                <div class="arrow1"></div>
-                                <div class="arrow2"></div>
-                            </div>
-                        </div>
-                        <p>Frontend Mentor</p>
-                    </a>
-                </span>
             </div>
         </section>
         <!-- contact end -->
