Add LinkedIn icon, "more blogs" in blogs

--- a/portfolio.html
+++ b/portfolio.html
@@ -307,12 +307,13 @@
                     </a>
                 </div>
 
-                <div class="blog">
+                <!-- <p>Tribute Page Project</p> -->
+                <!-- <div class="blog">
                     <a href="https://sonibasant.hashnode.dev/tribute-page-project-my-first-project" target="_blank" rel="noopener noreferrer">
                         <img src="https://sonibasant.github.io/Portfolio-Basant-Soni/Images/H5.jpg" alt="Tribute Page Project">
-                        <!-- <p>Tribute Page Project</p> -->
                     </a>
-                </div>
+                </div> -->
+
 <!-- 
                 <div class="blog">
                     <a href="https://sonibasant.hashnode.dev/survey-form" target="_blank" rel="noopener noreferrer">
@@ -320,6 +321,12 @@
                     </a>
                 </div> -->
 
+            </div>
+            
+            <div class="more-blogs">
+                <p>
+                    <a href="https://www.linkedin.com/in/soni-basant/" target="_blank" rel="noopener noreferrer">See more blogs in LinkedIn <i class="fas fa-arrow-right"></i></a>
+                </p>
             </div>
         </section>
         <!-- blogs end -->
@@ -376,6 +383,13 @@
                     <a href="https://github.com/SoniBasant" target="_blank" rel="noopener noreferrer">
                         <i class="fab fa-github"></i>
                         <p>GitHub</p>
+                    </a>
+                </span>
+
+                <span class="linkedin">
+                    <a href="https://www.linkedin.com/in/soni-basant/" target="_blank" rel="noopener noreferrer">
+                        <i class="fab fa-brands fa-linkedin"></i>
+                        <p>LinkedIn</p>
                     </a>
                 </span>
 
