--- a/portfolio.html
+++ b/portfolio.html
@@ -10,9 +10,9 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 
     <script defer src="portfolio.js"></script>
 </head>
@@ -20,10 +20,7 @@
     <!-- header start-->
     <header class="section sec1 header active" id="home">
         <div class="header-content">
-            <div class="left-header">
-                <div class="h-shape"></div>
-            </div>
-
+           
             <div class="right-header">
                 <h1 class="name">
                     Hi, I am <br> <span>Basant Soni</span> 
@@ -185,7 +182,7 @@
             <div class="projects-container">
 
                 <div class="project">
-                    <img src="Images/country-info.png" alt="Newsletter Signup">
+                    <img src="Images/country-info.png" alt="Country Info Project Image">
                     <p>Country Information</p>
                     <div class="masking">
                         <div class="project-links">
